NeoForge port (#32)