@@ -1,26 +1,12 @@
-buildscript {
-    repositories {
-        maven {
-            name = "MinecraftForge"
-            url = uri("https://files.minecraftforge.net/maven/")
-        }
-
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.0.+', changing: true
-        classpath 'org.spongepowered:mixingradle:0.7.+'
-    }
-}
-
 plugins {
+    id 'java-library'
+    id 'eclipse'
+    id 'idea'
+    id 'maven-publish'
+    id 'net.neoforged.gradle.userdev' version '7.0.80'
     id("com.matthewprenger.cursegradle") version "1.4.0"
     id("com.diffplug.spotless") version "6.4.1"
 }
-
-apply plugin: "net.minecraftforge.gradle"
-apply plugin: 'org.spongepowered.mixin'
 
 group = "dev.technici4n"
 version = System.getenv("AE2THINGS_VERSION") ?: "0.0.0"
@@ -51,15 +37,13 @@ repositories {
 }
 
 dependencies {
-    minecraft("net.minecraftforge:forge:${minecraft_version}-${forge_version}")
+    implementation "net.neoforged:neoforge:${neoforge_version}"
 
-    implementation(fg.deobf("appeng:appliedenergistics2-forge:${ae2_version}"))
+    implementation "appeng:appliedenergistics2-neoforge:${ae2_version}"
 
-    compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"))
-    compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}"))
-    runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))
-
-    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
+    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
+    runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
 }
 
 sourceSets {
@@ -76,59 +60,45 @@ java {
     }
 }
 
-mixin {
-    // MixinGradle Settings
-    add sourceSets.main, 'mixins.ae2things.refmap.json'
-    config 'mixins.ae2things.json'
-}
+runs {
+    // applies to all the run configs below
+    configureEach {
+        // Recommended logging data for a userdev environment
+        // The markers can be added/remove as needed separated by commas.
+        // "SCAN": For mods scan.
+        // "REGISTRIES": For firing of registry events.
+        // "REGISTRYDUMP": For getting the contents of all registries.
+        systemProperty 'forge.logging.markers', 'REGISTRIES'
 
-////////////////////
-// Forge/Minecraft
-minecraft {
-    mappings(channel: "official", version: "${minecraft_version}")
+        // Recommended logging level for the console
+        // You can set various levels here.
+        // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
+        systemProperty 'forge.logging.console.level', 'debug'
 
-    /**
-     * Configures properties common to all run configurations
-     */
-    def commonRunProperties = {
-        workingDirectory(project.file("run"))
-
-        property("forge.logging.console.level", "debug")
-        property("fml.earlyprogresswindow", "false")
-        jvmArgs("--add-opens", "java.base/sun.security.util=ALL-UNNAMED")
-        jvmArgs("--add-opens", "java.base/java.util.jar=ALL-UNNAMED")
-
-        // See https://github.com/Vazkii/Patchouli#mixin-troubleshooting
-        property("mixin.env.remapRefMap", "true")
-        property("mixin.env.refMapRemappingFile", "${projectDir}/build/createSrgToMcp/output.srg")
-        // property "mixin.debug.export", "true"
-
-        mods {
-            ae2things {
-                source(sourceSets.main)
-            }
-        }
+        modSource project.sourceSets.main
     }
 
-    runs {
-        client {
-            with(commonRunProperties)
-        }
+    client {
+        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
+        systemProperty 'forge.enabledGameTestNamespaces', "ae2things"
+    }
 
-        server {
-            with(commonRunProperties)
-        }
+    server {
+        systemProperty 'forge.enabledGameTestNamespaces', "ae2things"
+        programArgument '--nogui'
+    }
 
-        data {
-            with(commonRunProperties)
-            args("--mod", "ae2things", "--all", "--output", file("src/generated/resources/"), "--existing", file("src/main/resources"))
-        }
+    data {
+        // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
+        // workingDirectory project.file('run-data')
+
+        // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
+        programArguments.addAll '--mod', "ae2things", '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
     }
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
-    options.release.set(17)
 }
 
 processResources {
@@ -138,25 +108,6 @@ processResources {
 
     filesMatching("META-INF/mods.toml") {
         expand("version": project.version)
-    }
-}
-
-jar {
-    finalizedBy("reobfJar")
-
-    from(sourceSets.main.output.classesDirs)
-    from(sourceSets.main.output.resourcesDir)
-
-    manifest {
-        attributes([
-                "Specification-Title"     : "AE2Things",
-                "Specification-Vendor"    : "Technici4n",
-                "Specification-Version"   : "${project.version}",
-                "Implementation-Title"    : "${project.name}",
-                "Implementation-Version"  : "${project.version}",
-                "Implementation-Vendor"   : "Technici4n",
-                "MixinConfigs"            : "mixins.ae2things.json",
-        ])
     }
 }
 
@@ -201,7 +152,7 @@ System.getenv("CURSEFORGE")?.with { String key ->
             }
 
             addGameVersion("${minecraft_version}")
-            addGameVersion("Forge")
+            addGameVersion("NeoForge")
 
             mainArtifact(jar) {
                 displayName = "AE2 Things v${version}"
